--- a/Czech/main/framework-ext-res.apk/res/values-cs-rCZ/strings.xml
+++ b/Czech/main/framework-ext-res.apk/res/values-cs-rCZ/strings.xml
@@ -178,11 +178,11 @@
   <string name="resolver_offical_recommend">Oficiální</string>
   <string name="resolver_other_method">Jiné možnosti</string>
   <string name="resolver_recommend_options_tag">Doporučené možnosti</string>
-  <string name="popup_camera_calibrate_failed">Nebylo možné kalibrovat. Navštivte Xiaomi servis pro vyřešení tohoto problému.</string>
+  <string name="popup_camera_calibrate_failed">Nebylo možné kalibrovat.</string>
   <string name="popup_camera_calibrate_now">Kalibrovat</string>
   <string name="popup_camera_calibrate_success">Kalibrace dokončena. Můžete otevřít přední kameru.</string>
   <string name="popup_camera_front_failed">Nebylo možné otevřít přední kameru.</string>
-  <string name="popup_camera_front_falied_times">Nebylo možné otevřít přední kameru. Navštivte Xiaomi servis pro vyřešení tohoto problému."</string>
+  <string name="popup_camera_front_falied_times">Nebylo možné otevřít přední kameru."</string>
   <string name="popup_camera_front_when_use">Predna kamera je zaneprázdněna. I tak otevřít?</string>
   <string name="popup_camera_popup_falied_times_calibrate">Nebylo možné otevřít přední kameru. Zkuste kalibrovat kameru.</string>
   <string name="popup_camera_sure">Rozumím</string>
