--- a/Czech/main/Settings.apk/res/values-cs/strings.xml
+++ b/Czech/main/Settings.apk/res/values-cs/strings.xml
@@ -5602,6 +5602,9 @@ Tato funkcia vyžaduje povolení pro přístup k vaší poloze, používání mo
   <string name="permission_group_phone">Telefon</string>
   <string name="permission_group_sms">SMS</string>
   <string name="permission_group_storage">Úložiště</string>
+  <string name="agreement_and_privacy">Podmínky používání a Ochrana soukromí</string>
+  <string name="passport_first_login_prompt">Mi účet bude automaticky vytvořen když se poprvé přihlásíte.</string>
+  <string name="scan_barcode">Načtěte QR kód</string>
    <string name="crypt_keeper_switch_to_pattern">Použít vzor</string>
   <string name="crypt_keeper_switch_to_pin">Použít PIN</string>  
   <string name="cutout_mode_always">Vždy zobrazit výřez</string>
@@ -5691,4 +5694,67 @@ Tato funkcia vyžaduje povolení pro přístup k vaší poloze, používání mo
   <string name="toggle_collapse_after_clicked_title">Sbalit po dotyku</string>
   <string name="vibrate_title">Vibrovat</string>
   <string name="visibility_override_title">Na zamčené obrazovce</string>
+  <string name="usage_state_app_timer">Čas displeje</string>
+  <string name="usage_state_app_usage_detail_title">Používání aplikace</string>
+  <string name="usage_state_app_usage_list_title">Využití displeje aplikacemi</string>
+  <string name="usage_state_app_usage_list_week_title">Využití displeje aplikacemi (posledních 7 dní))</string>
+  <string name="usage_state_app_usage_tip_title" formatted="false">Čas displeje mezi %d:00 - %d:00</string>
+  <string name="usage_state_app_use_time">Čas displeje</string>
+  <string name="usage_state_channel_mouth">Posledních 30 dní</string>
+  <string name="usage_state_channel_week">Posledních 7 dní</string>
+  <string name="usage_state_device_noti_today_tip_title" formatted="false">Upozornění mezi %d:00 - %d:00</string>
+  <string name="usage_state_device_unlock_today_tip_title" formatted="false">Odemknuté zařízení mezi %d:00 - %d:00</string>
+  <string name="usage_state_friday">Pá</string>
+  <string name="usage_state_go_more">více aplikací</string>
+  <string name="usage_state_hour_minute" formatted="false">%dh %dm</string>
+  <string name="usage_state_less_one_minute">Méně než 1 min</string>
+  <string name="usage_state_monday">Pon</string>
+  <string name="usage_state_mourth_day">"'Čas displeje' MMM d"</string>
+  <string name="usage_state_noti_mourth_day">"'Upozornění' MMM d"</string>
+  <string name="usage_state_notification">Spravovat upozornění</string>
+  <string name="usage_state_notification_manager">Spravovat upozornění aplikace</string>
+  <string name="usage_state_remind_summary">Povolte pokud chcete dostávat upozornění na čas užívání displeje.</string>
+  <string name="usage_state_remind_title">Upozornění na čas užívání</string>
+  <string name="usage_state_rest_day">Víkendy</string>
+  <string name="usage_state_saturday">Sob</string>
+  <string name="usage_state_set_invalid_time_toast">Nelze nastavit limit na méně než 1min</string>
+  <string name="usage_state_sunday">Ned</string>
+  <string name="usage_state_thursday">Čtv</string>
+  <string name="usage_state_today">Dnes</string>
+  <string name="usage_state_today_total_text">Čas užívání displeje dnes</string>
+  <string name="usage_state_tuesday">Úte</string>
+  <string name="usage_state_unlock_mourth_day">"'Odemknuto' MMM d"</string>
+  <string name="usage_state_usage_time">Čas displeje</string>
+  <string name="usage_state_usage_time_remind">Upozornění na čas užívání</string>
+  <string name="usage_state_use_time_remind_title">Upozornění na čas užívání</string>
+  <string name="usage_state_wednesday">Stř</string>
+  <string name="usage_state_week_day_hour_minute" formatted="false">Víkendy: %dh %dm</string>
+  <string name="usage_state_week_total_text">Čas užívání displeje (posledních 7 dní)</string>
+  <string name="usage_state_which_mouth">MMM</string>
+  <string name="usage_state_work_day">Pracovní dny</string>
+  <string name="usage_state_work_day_hour_minute" formatted="false">Pracovní dny: %dh %dm</string>
+  <string name="usage_stats_normal_day">Pracovní dny</string>
+  <string name="usage_stats_week_day">Pracovní dny</string>
+  <string name="usagestats_app_category_miui_financial">Finance</string>
+  <string name="usagestats_app_category_miui_game">Hry</string>
+  <string name="usagestats_app_category_miui_life">Životní styl</string>
+  <string name="usagestats_app_category_miui_productivity">Produktivita</string>
+  <string name="usagestats_app_category_miui_reading">Čtení</string>
+  <string name="usagestats_app_category_miui_shopping">Nakupování</string>
+  <string name="usagestats_app_category_miui_social">Sociální sítě</string>
+  <string name="usagestats_app_category_miui_system">systémové aplikace</string>
+  <string name="usagestats_app_category_miui_tools">Nástroje</string>
+  <string name="usagestats_app_category_miui_undefined">Ostatní</string>
+  <string name="usagestats_app_category_miui_video_etc">Hudba a video</string>
+  <string name="usagestats_device_notification_des">Dnešní limit užívání displeje: %s</string>
+  <string name="usagestats_device_notification_des_over">Už jste dosáhli svůj dnešní limit užívání displeje.</string>
+  <string name="usagestats_device_notification_des_reset" formatted="false">Dnešní limit užívání displeje: %s | %s zbývá</string>
+  <string name="usagestats_device_notification_title">Upozornění na čas užívání</string>
+  <string name="usagestats_device_timeout_des" formatted="false">Dnes jste používali své zařízení% %dh %dm. Odpočiňte si.!</string>
+  <string name="usagestats_device_timeout_negative">Upozornit za 1 hodinu</string>
+  <string name="usagestats_device_timeout_positive">Rozumím</string>
+  <string name="usagestats_device_timeout_title">Upozornění na čas užívání</string>
+  <string name="wifi_protection_on">Zap</string>
+  <string name="wifi_protection_settings_title">Wi-Fi ochrana</string>
+  <string name="wifi_protection_tip">MIUI automaticky povolí Wi-Fi ochranu. Během vyhledávání Wi-Fi sítí v okolí, náhodně změní MAC adresu zařízení pro ochranu vašeho soukromí.</string>
 </resources>
