--- a/Czech/main/SecurityCoreAdd.apk/res/values-cs/strings.xml
+++ b/Czech/main/SecurityCoreAdd.apk/res/values-cs/strings.xml
@@ -382,5 +382,6 @@ Můžete je i znovu stáhnout."</string>
   <string name="button_touch">Přiložte prst na senzor otisku prsta</string>
   <string name="dialog_verify">Ověřte svůj otisk</string>
   <string name="dialog_verify_fingerprint_retry">Nelze ověřit</string>
-
+  <string name="dual_animation">Animace otevírání</string>
+  <string name="dual_animation_description">Zobrazit animaci při otevírání klonované aplikace</string>  
 </resources>
