--- a/Czech/main/MiuiCamera.apk/res/values-cs/strings.xml
+++ b/Czech/main/MiuiCamera.apk/res/values-cs/strings.xml
@@ -748,5 +748,8 @@ pro rozmazání pozadí objektu"</string>
   	 <string name="portrait_mode_use_hint_for_bokeh">"Vyzkoušejte režim Portrét.
 Objekt bude ostrý na rozmazaném pozadí."</string> 
 <string name="beauty_body_whole">Postava</string>
-  <string name="ultra_wide_mode_use_hint_text_sat">Vyzkoušejte 0.6X Ultra široký úhel záběru pro co největší záběr ze scény.</string>  
+  <string name="ultra_wide_mode_use_hint_text_sat">Vyzkoušejte 0.6X Ultra široký úhel záběru pro co největší záběr ze scény.</string> 
+  <string name="beauty_clear">Vymazat</string>
+  <string name="beauty_clear_toast">Efekty zkrášlení jsou odstraněny</string>
+  <string name="edit_hairline">Účes</string> 
 </resources>
