--- a/Czech/main/MiuiScanner.apk/res/values-cs/strings.xml
+++ b/Czech/main/MiuiScanner.apk/res/values-cs/strings.xml
@@ -199,4 +199,5 @@
   <string name="setting_default_function">Výchozí funkce</string>
   <string name="setting_title">Nastavení</string>
   <string name="setting_use_last_choose">Pamatovat předchozí nastavení</string>
+  <string name="business_card_with_qr_code">Zaměřte vizitku nebo QR do rámečku</string>
 </resources>
