--- a/Czech/main/PersonalAssistant.apk/res/values-cs/strings.xml
+++ b/Czech/main/PersonalAssistant.apk/res/values-cs/strings.xml
@@ -444,4 +444,57 @@
   <string name="cta_dialog_text_all">Používáním Asistena souhlasíte s %1$s\"Podmínkami používání\" %2$s a %3$s \"Ochranou soukromí\" %4$s.</string>
   <string name="login_dialog_title">Synchronizace</string>
   <string name="login_dialog_body">Povolte synchronizaci s MiCloud pro zálohování nastavení Asistenta.</string> 
+  <string name="app_suggest_detail_setting_summary">Doporučení aplikací bude založeno na vašem používání aplikací</string>
+  <string name="app_suggest_detail_setting_title">Povolit přístup ke stavu aplikací</string>
+  <string name="app_suggest_setting_brief">Zobrazit nedávno používané aplikace</string>
+  <string name="app_suggest_setting_brief_detail">Doporučení aplikací bude založeno na vašem používání aplikací</string>
+  <string name="app_suggest_setting_title">Doporučení aplikací</string>
+  <string name="cta_dialog_text_new_user">Před použitím Asistenta, musíte souhlasit s Xiaomi %1$s\"Podmínkami používání\"%2$s, %3$s\"Ochranou soukromí\"%4$s, a %5$s\"Podmínkami užívání Asistenta\"%6$s. Stiskněte \"Spustit\" pokud souhlasíte."</string>
+  <string name="cta_dialog_text_old_user">Před použitím Asistenta, musíte souhlasit s %1$s\"Podmínkami používání\"%2$s. Stlačte \"Spustit\" pokud souhlasíte.</string>
+  <string name="cta_not_now">Později</string>
+  <string name="cta_old_not_use">Později</string>
+  <string name="cta_old_start">Spustit</string>
+  <string name="cta_start">Spustit</string>
+  <string name="display_weather_default">Získat info o počasí</string>
+  <string name="load_more_error">Chyba sítě. Zkuste to později znovu.</string>
+  <string name="load_no_more">To je vše.</string>
+    <string name="miot_cta_dialog_title">Povolit autorizaci</string>
+    <string name="miot_del_dialog_cancel">Ponechat</string>
+    <string name="miot_del_dialog_sure">Odstranit</string>
+    <string name="miot_delete_dialog_content">Bude možné obnovit MiHome v nastaveních Asistenta.</string>
+    <string name="miot_delete_dialog_title">Odstranění MiHome karty</string>
+    <string name="miot_device_add_device">Přidat</string>
+    <string name="miot_device_all_device">Všechna zařízení</string>
+    <string name="miot_device_cancel">Zrušit</string>
+    <string name="miot_device_card_title">Mihome</string>
+    <string name="miot_device_click_show_detail">(Dotykem zjistíte více o smart home)</string>
+    <string name="miot_device_cta_and"> a </string>
+    <string name="miot_device_cta_message">Přidejte vaše smart zařízení pro jejich ovládání.</string>
+    <string name="miot_device_cta_priv">Ochrana soukromí.</string>
+    <string name="miot_device_cta_use_info">MiHome Podmínky používání</string>
+    <string name="miot_device_edit">Upravit</string>
+    <string name="miot_device_edit_device">Upravit rozložení</string>
+    <string name="miot_device_empty_text">Přidejte kameru, vysavač, čističku vzduchu a ostatní smart zařízení..</string>
+    <string name="miot_device_install_mijia">Stáhnout</string>
+    <string name="miot_device_introduction">Rychlé ovládání smart zařízení</string>
+    <string name="miot_device_loading">Načítání...</string>
+    <string name="miot_device_login">Přihlásit se</string>
+    <string name="miot_device_mijia_logout_message">Nejdříve se musíte přihlásit k Mi účtu. Chcete se přihlásit?</string>
+    <string name="miot_device_mijia_logout_title">Nejste přihlášen</string>
+    <string name="miot_device_mijia_uninstall_message">MiHome aplikace není nainstalována. Chcete ji nainstalovat nyní?</string>
+    <string name="miot_device_mijia_uninstall_title">Není nainstalován</string>
+    <string name="miot_device_network_error">Žádné připojení</string>
+  <string name="preload_empty">Žádné položky. Potáhněte dolů pro obnovení.</string>
+  <string name="quick_app_setting_brief">Nedávná použité aplikace</string>
+  <string name="quick_app_setting_brief_detail">Zobrazit všechny aplikace, které jste použili</string>
+  <string name="quick_app_title">Nedávné aplikace</string>
+  <string name="recommend_empty_tip">Žádné položky. Můžete přidat více zařízení.</string>
+  <string name="refresh_error">Nastala chyba sítě.</string>
+  <string name="refresh_over_pull">Pusťte pro obnovení</string>
+  <string name="refresh_pull">Potáhněte pro obnovení</string>
+  <string name="refresh_refreshing">Obnovení...</string>
+  <string name="selected_shortcuts_title">Funkce</string>
+  <string name="setting_title_resident_function">Permanentní funkce</string>
+  <string name="toast_function_add_limit">Můžete přidat až %d zkratek</string>
+    <string name="all_function_title">Všechny zkratky</string>
 </resources>
